--- a/style.css
+++ b/style.css
@@ -280,3 +280,8 @@ padding: 0 10px;
         transition: 0.2;
     }
     
+    .text-danger{
+        color: red;
+        font-size: 20px;
+        display: inline;
+    }
